fix(docs): Fix top bar menu on mobile wrapping

--- a/docs/assets/styles/_top-bar.scss
+++ b/docs/assets/styles/_top-bar.scss
@@ -22,6 +22,7 @@
 
     @media all and (max-width: $sm-breakpoint){
         padding: 12px;
+        font-size: $font-size-14;
     }
 
     &.landing-page {
